# Pantomath

./: CONTRIBUTING.md  Makefile  README.md  build.sh  pyproject.toml  requirements.txt
backend/: app.py
backend/api/: routes.py
backend/connectors/: base.py  registry.py  rss.py
backend/database/: models.py  sqlite.py
backend/feeds/: parser.py  scheduler.py
backend/intelligence/: enrichment.py  scoring.py  tagging.py
config/: feeds.json
docs/: ARCHITECTURE.md
frontend/components/: icon.js
frontend/pages/: dashboard.html
frontend/themes/: pantomath.css
frontend/widgets/: app.js  calendar.js  charts.js  feed-list.js  notifications.js  pagination.js  theme.js
installer/deb/: pantomath.service  postinstall.sh  postremove.sh  preremove.sh
installer/rpm/: nfpm.yaml  pantomath.service  postinstall.sh
installer/wheelhouse/: websockets-16.1-cp310-cp310-manylinux1_x86_64.manylinux_2_28_x86_64.manylinux_2_5_x86_64.whl  (+1 more)
pantomath/: __init__.py  app.py
pantomath.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: conftest.py  test_aggregation_endpoints.py  test_api_integration.py  test_article_fetcher.py  test_connectors_registry.py  test_database_restore.py  test_frontend_view_consistency.py  test_ioc_calendar_navigation.py  test_ioc_calendar_state.py  test_ioc_drilldown_persistence.py  test_ioc_extraction.py  test_parser.py  test_reprocessor.py  test_rss_connector.py  test_scoring.py  test_tagging.py  test_webhook_api.py  test_webhook_keys.py  test_webhook_matcher.py  test_webhook_protection.py  test_xss_link_sanitization.py
(+24 files in other folders)
