[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "pantomath"
version = "1.13.0"
description = "Threat intelligence RSS feed aggregator dashboard"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "Pantomath Project" }]

dependencies = [
    "fastapi==0.139.0",
    "uvicorn[standard]==0.49.0",
    "feedparser==6.0.12",
    "aiosqlite==0.22.1",
    "pydantic==2.13.4",
    "python-multipart==0.0.32",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",   # required by fastapi.testclient.TestClient
    "ruff>=0.6",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["pantomath*"]

# ---------------------------------------------------------------- tooling

[tool.ruff]
line-length = 110
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]  # line length is a soft guideline here, not a hard gate

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
